# Cara

./: CMakeCache.txt  Makefile  README.md  _test  cmake_install.cmake  run
cara/: readme.md
cara/src/: cara.cpp  cara.h  cara.hpp  cvm.cpp  cvm.h  cvm.hpp  defs.h  fdefs.h  instrs.c  instrs.cpp  instrs.h  instrs.hpp  main.cpp  objects.cpp  objects.h  objects.hpp  panic.h  readme.md  tests.cpp  vmdefs.h  vmdefs.hpp
carac/: cvmc.md  readme.md
init/: CMakeLists.txt
src/: cara.cpp  cara.hpp  fdefs.h  main.cpp  objects.cpp  objects.hpp  tests.cpp
